[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GOSTboundaries"
dynamic = ["version"]
description = "Comparison of various boundaries sources"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.md", content-type = "text/markdown"}
keywords = ["world bank", "boundaries"]
authors = [
  {name="Global Operations Support Team", email="gost@worldbank.org"},
]
maintainers = [
  {name="Benjamin P. Stewart", email="bstewart@worldbankgroup.org"},
]
classifiers = [
    "Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3 :: Only",
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
	"folium>=0.14.0",
	"shapely>=2.0.1",
	"rasterio>=1.3.6",
	"pandas>=1.5.3,<2",
	"geopandas>=0.12.2",
]
[project.optional-dependencies]
notebook = ["notebook>=6.5.2"]

[project.urls]
"Homepage" = "https://github.com/worldbank/Boundary_Comparison"
"Bug Reports" = "https://github.com/worldbank/Boundary_Comparison/issues"
"Source" = "https://github.com/worldbank/Boundary_Comparison"

[tool.setuptools.dynamic]
version = {attr = "GOSTboundaries.__version__"}